--- a/.autogen/_config.yml
+++ b/.autogen/_config.yml
@@ -1,9 +1,10 @@
 # AUTO-GENERATED FILE. DO NOT EDIT.
 # This file was generated from _content.yml by scripts/preprocess_content_yml.py
 # Edit _content.yml instead and re-run the preprocessor.
-title: Modern Classical Mechanics
+title: Modern Mathematical Methods
 author: Danny Caballero
-description: A modern, open-source course in classical mechanics.
+description: A modern, open-source course in mathematical methods for physics and
+  astrophysics.
 logo: static/images/logo.png
 favicon: static/images/favicon.ico
 theme:
@@ -11,7 +12,7 @@ theme:
   light: light
   dark: dark
 language: en
-github_url: https://github.com/dannycab/modern-classical-mechanics
+github_url: https://github.com/dannycab/modern-mathematical-methods
 build:
   outputs:
   - html
