--- a/_content.yml
+++ b/_content.yml
@@ -1,3 +1,16 @@
+site:
+  title: "Modern Mathematical Methods"
+  author: "Danny Caballero"
+  description: "A modern, open-source course in mathematical methods for physics and astrophysics."
+  logo: "static/images/logo.png"
+  favicon: "static/images/favicon.ico"
+  theme:
+    default: dark
+    light: light
+    dark: dark
+  language: "en"
+  github_url: "https://github.com/dannycab/modern-mathematical-methods"
+  
 toc:
   - title: "Home"
     menu: true
@@ -138,3 +151,35 @@ toc:
         file: content/about.md
       - title: "Announcements"
         file: content/announcement.md
+
+static:
+  images:
+    - path: static/images/
+      description: "Site-wide images and figures"
+  css:
+    - path: static/css/
+      description: "Custom CSS files"
+  js:
+    - path: static/js/
+      description: "Custom JavaScript files"
+  templates:
+    - path: static/templates/
+      description: "HTML templates"
+  themes:
+    - path: static/themes/
+      description: "Theme files"
+
+# Metadata for automated build and export
+build:
+  outputs:
+    - html
+    - pdf
+    - docx
+    - md
+    - tex
+  output_dir: _build/
+  docs_dir: docs/
+  sources_dir: docs/sources/
+  notebooks_dir: content/notebooks/
+  static_dir: static/
+  images_dir: static/images/
